# modbuscc

./: .gitignore  BUILD  MODULE.bazel  README.md  modbus_client.cc  modbus_client.h  modbus_functions.h  modbus_tcp_client.cc  modbus_tcp_client.h  modbus_tcp_client_win.h  serial_posix.cc
src/: BUILD  modbus_client.cc  modbus_client.h  modbus_functions.cc  modbus_tcp_client_win.cc  serial.h  serial_client_posix.cc  serial_client_posix.h  serial_client_win.cc  serial_client_win.h  serial_posix.h
tests/: BUILD  modbus_client_test.cc  modbus_functions_test.cc
